--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(PackageTest CXX)
+project(PackageTest)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(example example.cpp)
+add_executable(example example.c)
 target_link_libraries(example ${CONAN_LIBS})
 
 # CTest is a testing tool that can be used to test your project.
